updated the functionality part

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul id="jokes"></ul>
       </div>
       <div class="btn-container">
-        <button id="reset-btn">Reset</button>
+        <button id="reset-btn">New</button>
       </div>
     </section>
 
